fix:Correct the overflow of the of the buttons

--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -166,6 +166,7 @@ html[data-theme='dark'] .topBannerTitleText {
   flex-wrap: wrap;
   align-items: center;
   margin-top: 24px;
+  overflow: hidden;
 }
 
 .indexCtas a,
